--- a/butterfly/package.json
+++ b/butterfly/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
-    "express": "4.10.2",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
     "socket.io": "1.2.0"
   }
 }
