--- a/butterfly/package.json
+++ b/butterfly/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "socket.io": "1.2.0"
-  }
+    "socket.io": "^1.7.3"
+  },
+   "scripts": {
+        "start": "node index.js"
+    }
 }
