--- a/backfront/src/main/resources/application.properties
+++ b/backfront/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.jpa.show-sql=true
