--- a/backfront/src/main/resources/application.properties
+++ b/backfront/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.show-sql=true
+spring.h2.console.enabled=true
