--- a/backfront/pom.xml
+++ b/backfront/pom.xml
@@ -40,6 +40,8 @@
                 <configuration>
                     <release>14</release>
                     <compilerArgs>--enable-preview</compilerArgs>
+                    <source>14</source>
+                    <target>14</target>
                 </configuration>
             </plugin>
         </plugins>
